# cell

./: .gitignore  API.md  ATTRIBUTION  Cargo.toml  CellGit.md  Conclusion.md  Design.md  Economy.md  FIX.md  Global.md  INTERNAL_COMMUNICATION.md  Idea.md  Multi-lang-support.md  Need.md  RCP.md  README.md  SECURITY.md  SharedMemory.md  TODO.md  Thoughts.md  Todo.md  UseCases.md  deny.toml
.cargo/: config.toml
cell-axon/: Cargo.toml
cell-axon/src/: axon.rs  discovery.rs  lib.rs  pheromones.rs
cell-bind/: Cargo.toml
cell-bootstrap/: Cargo.toml
cell-build/: Cargo.toml
cell-build/src/: lib.rs
cell-build/tests/: macro_runner_test.rs
cell-cli/: Cargo.toml
cell-cli/docs/: Mitosis.md
cell-cli/src/: antigens.rs  config.rs  genesis.rs  golgi.rs  lib.rs  main.rs  mitochondria.rs  nucleus.rs  router.rs  synapse.rs  transport.rs  vacuole.rs
cell-cli/src/golgi/: discovery.rs  mod.rs  pheromones.rs
cell-cli/tests/: discovery_test.rs  economy_test.rs  network_test.rs  nucleus_billing_test.rs  round_robin_test.rs  transport_test.rs
cell-codec/: Cargo.toml
cell-codec/src/: lib.rs
cell-consensus/: Cargo.toml
cell-consensus/src/: compaction.rs  lib.rs  network.rs  wal.rs
cell-consensus/tests/: consensus_test.rs  raft_test.rs
cell-core/: Cargo.toml
cell-core-macros/: Cargo.toml
cell-core-macros/src/: lib.rs
cell-core/src/: error.rs  lib.rs  vesicle.rs
cell-discovery/: Cargo.toml
cell-discovery/src/: hardware.rs  health.rs  lan.rs  lib.rs  local.rs
cell-discovery/tests/: hardware.rs
cell-go/: cell.go
cell-macros/: Cargo.toml
cell-macros/src/: coordination.rs  expand.rs  lib.rs  test.rs
cell-model/: Cargo.toml
cell-model/src/: config.rs  error.rs  io.rs  lib.rs  manifest.rs  ops.rs  protocol.rs  schema.rs  topology.rs  vesicle.rs
cell-process/: Cargo.toml
cell-process/src/: capsid.rs  lib.rs  ribosome.rs  root.rs
cell-sdk/: Cargo.toml
cell-sdk-py/: cell.py
cell-sdk/examples/: cell-discover.rs
cell-sdk/src/: axon.rs  bootstrap.rs  capsid.rs  config.rs  connection_manager.rs  container.rs  crdt.rs  discovery.rs  error.rs  error_response.rs  gpu_shared.rs  heartbeat.rs  identity.rs  io_client.rs  lib.rs  logging.rs  membrane.rs  mesh.rs  metrics.rs  organogenisis.rs  pheromones.rs  protocol.rs  quic.rs  registry.rs  resilient_synapse.rs  response.rs  ribosome.rs  root.rs  router.rs  runtime.rs  shm.rs  shm_fd.rs  synapse.rs  system.rs  test_context.rs  tissue.rs  vesicle.rs
cell-sdk/tests/: crdt.rs  handler_return_type.rs  macro_expansion_integration.rs  membrane_send_bound.rs  serialization_test.rs  typed_database_e2e.rs
cell-test-support/: Cargo.toml
cell-test-support/src/: lib.rs
cell-transport/: Cargo.toml
cell-transport/src/: circuit_breaker.rs  coordination.rs  gap_junction.rs  lib.rs  membrane.rs  response.rs  shm.rs  synapse.rs  transport.rs
cell-transport/tests/: secure.rs
cells/axon/: Cargo.toml
cells/axon/src/: axon.rs  main.rs  pheromones.rs
cells/axon/tests/: axon.rs
cells/io/: Cargo.toml
cells/io/src/: main.rs
cells/mycelium/: Cargo.toml
cells/mycelium/src/: main.rs
cells/nucleus/: Cargo.toml
cells/nucleus/src/: main.rs
cells/nucleus/tests/: manifest.rs  nucleus.rs
cells/state-manager/: Cargo.toml
coordinator/: Cargo.toml
coordinator/.cell-schemas/: worker.hash
cytosol/: Cargo.toml
cytosol/src/: vesicle.rs
dev/: CONTRIBUTING.md  DAG  Idea.md  Orchestration.md  README.md  Thoughts.md  Todo.md
dev/cell-bind/: Cargo.toml
dev/cell-discovery/: Cargo.toml
dev/cell-discovery/src/: lan.rs  local.rs  mdns.rs
dev/palantir-cell/: Cargo.toml  Cell.toml
dev/palantir-cell/cells/identity/: Cargo.toml
dev/palantir-cell/cells/identity/src/: main.rs
dev/palantir-cell/cells/orchestrator/: Cargo.toml  Cell.toml
dev/palantir-cell/cells/orchestrator/src/: main.rs
dev/palantir-cell/cells/provenenve/: Cargo.toml
dev/palantir-cell/cells/provenenve/src/: main.rs
docs/: API.md  Cell.md  Cell2.md  CellAPI.md  CellFuture.md  CellMacros.md  CellMacros2.md  CellMeshLifeCycleArchitecture.md  CellMeshQuickStartGuide.md  Cloud.md  Communication.md  CycleFlowDiagram.md  Decisions.md  DevelopmentIsProduction.md  DevelopmentIsProduction2.md  DevelopmentIsProductionImplementation.md  Goal.md  INTERNAL_COMMUNICATION.md  Ideas.md  Motivation2.md  Multi-lang-support.md  Notes.md  Questions.md  Roadmap.md  SECURITY.md  SchemaEvolution.md  SecurityIssues.md  State.md  TODO.md  TheCellArchitecture.md  Thoughts.md  Tissue.md  Todo.md  WhatIsCell.md  WhatIsCell2.md  k8Convenience.md  not_decided.md
examples/: Cargo.toml
examples/cell-consensus-raft/: Cargo.toml
examples/cell-consensus-raft/src/: compaction.rs  main.rs  raft.rs  snapshot.rs  wal.rs
examples/cell-git/: Cargo.toml
examples/cell-git/src/: main.rs
examples/cell-market/: Cargo.toml
examples/cell-market/cells/exchange/: Cargo.toml
examples/cell-market/cells/exchange/src/: main.rs
examples/cell-market/cells/protocol/: Cargo.toml
examples/cell-market/cells/protocol/src/: lib.rs
examples/cell-market/cells/trader/: Cargo.toml
examples/cell-market/cells/trader/src/: main.rs
examples/cell-market/consumer/: Cargo.toml
examples/cell-market/consumer/src/: main.rs
examples/cell-market/engine/: Cargo.toml
examples/cell-market/engine/src/: main.rs
examples/cell-market/engine/tests/: engine.rs
examples/cell-market/gateway/: Cargo.toml
examples/cell-market/gateway/src/: main.rs
examples/cell-market/ledger/: Cargo.toml  build.rs
examples/cell-market/ledger/src/: main.rs
examples/cell-market/src/: main.rs
examples/cell-mesh/: Cargo.toml  Cell.toml  README.md  genome.toml
examples/cell-mesh/src/: main.rs
game-demo/: Cell.toml  README.md  run.sh
membrane/: Cargo.toml
personal-docs/: API.md  Auto Fix.md  Cell.md  CellMacroSupportFeature.md  Commands.md  CompileTimeSafety.md  Cool.md  DO.md  Decisions.md  Ideas.md  Ideas1.md  Layout.md  LoadBalancing.md  Loan.md  Motivation1.md  Motivation3.md  SharedMemory.md  Thoughts.md
ribosome/: Cargo.toml
ribosome/src/: lib.rs
tests/: global.rs  integration.rs  (+1 more)
(+386 files in other folders)
