[workspace]
resolver = "2"
members = [
    "cell-model",
    "cell-transport",
    "cell-axon",
    "cell-process",
    "cell-sdk",
    "cell-macros"
]
exclude = ["examples"]

[workspace.package]
version = "0.4.0"
authors = ["Leif Rydenfalk"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Leif-Rydenfalk/cell"
description = "A biological distributed supercomputing substrate."

[workspace.dependencies]
cell-model = { path = "./cell-model", version = "0.4.0" }
cell-transport = { path = "./cell-transport", version = "0.4.0" }
cell-axon = { path = "./cell-axon", version = "0.4.0" }
cell-process = { path = "./cell-process", version = "0.4.0" }
cell-sdk = { path = "./cell-sdk", version = "0.4.0" }
cell-macros = { path = "./cell-macros", version = "0.3.0" }

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
bytes = "1.5"
blake3 = "1.5"
dirs = "5.0"
rand = "0.8"
memmap2 = "0.5"
fd-lock = "4.0"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.27", features = ["mman", "fs", "socket", "uio", "ioctl", "user"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
rcgen = "0.11"
local-ip-address = "0.5"
if-addrs = "0.10"
users = "0.11"
futures = "0.3"
webpki-roots = "0.25"
rustls-pemfile = "1.0"