[package]
name = "cell-build"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
dirs = "5.0"
prettyplease = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
