[package]
name = "cell-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cell-sdk = { path = "../cell-sdk" }
cell-model = { path = "../cell-model" }
cell-process = { path = "../cell-process" }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"