[package]
name = "cell-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-sdk = { path = "../cell-sdk" }
cell-model = { path = "../cell-model" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rkyv = "0.7"
dirs = "5.0"
colored = "2.0"