[package]
name = "cell-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cell"
path = "src/main.rs"

[dependencies]
cell-sdk = { path = "../cell-sdk" }
cell-model = { path = "../cell-model", features = ["std"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rkyv = "0.7"
dirs = "5.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
crossterm = { workspace = true }
tui = { workspace = true }

[build-dependencies]
dirs = "5.0"
