[package]
name = "cell-codec"
version = "0.4.1"
edition = "2021"
description = "Codec utilities for the Cell distributed computing framework"
license = "MIT"
repository = "https://github.com/Leif-Rydenfalk/cell"

[dependencies]
cell-core = { version = "0.4.1" }
rkyv = { version = "0.7", default-features = false, features = [
    "size_32",
    "alloc",
] }
