[package]
name = "cell-consensus"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cell-model = { workspace = true }
cell-codec = { workspace = true }
cell-core = { workspace = true }
cell-sdk = { workspace = true }
crc32fast = "1.3"
tokio = { version = "1.36", features = ["full", "sync"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }