[package]
name = "cell-consensus"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cell-model = { workspace = true }
cell-codec = { workspace = true }
cell-core = { workspace = true }
# Replaced cell-sdk with cell-transport to break cycle
cell-transport = { workspace = true, features = ["std"] }
crc32fast = "1.3"
tokio = { version = "1.36", features = ["full", "sync"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
# Added explicit rkyv dependency for proc-macro
rkyv = { version = "0.7", features = ["validation", "size_32"] }