[package]
name = "cell-core"
version = "0.4.1"
edition = "2021"
description = "Core primitives for the Cell distributed computing framework"
license = "MIT"
repository = "https://github.com/Leif-Rydenfalk/cell"
keywords = ["distributed", "actor", "rpc", "zero-copy"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }
rkyv = { version = "0.7", default-features = false, optional = true, features = [
    "size_32",
] }
