[package]
name = "cell-macros"
version = "0.3.0"
edition = "2021"
authors = ["Leif Rydenfalk"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Leif-Rydenfalk/cell"
description = "Procedural macros for Cell schemas."

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "parsing"] }
proc-macro2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
# We need rkyv directly here for compile-time serialization (Mitosis)
rkyv = { workspace = true }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"