[package]
name = "cell-macros"
version = "0.3.0"
edition = "2021"
authors = ["Leif Rydenfalk"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Leif-Rydenfalk/cell"
description = "Procedural macros for Cell schemas."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "parsing",
    "visit",
    "fold",
] }
proc-macro2 = "1.0"
convert_case = "0.6"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
anyhow = "1.0"
cell-build = { path = "../cell-build", version = "0.1.0" }
cell-core = { path = "../cell-core", version = "0.4.0" }
cell-model = { path = "../cell-model", version = "0.4.0" }
cell-transport = { path = "../cell-transport", version = "0.4.0", features = [
    "std",
] }
tokio = { version = "1.36", features = ["full"] }
