[package]
name = "cell-macros"
version = "0.4.1"
edition = "2021"
authors = ["Leif Rydenfalk"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Leif-Rydenfalk/cell"
description = "Procedural macros for Cell schemas."

[features]
default = []
std = []     # Add this empty feature

[lib]
proc-macro = true

[dependencies]
cell-core-macros = { version = "0.4.1", path = "../cell-core-macros" }
cell-build = { version = "0.4.1", path = "../cell-build" }
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "parsing",
    "visit",
    "fold",
] }
proc-macro2 = "1.0"
convert_case = "0.6"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
anyhow = "1.0"
