[package]
name = "cell-process"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cell-model = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
tracing = { workspace = true }
users = "0.11"
fd-lock = "4.0"
blake3 = { workspace = true }