[package]
name = "cell-process"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cell-model = { workspace = true }
# Removed heavy deps like users, fd-lock from here
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
tracing = { workspace = true }
rkyv = { workspace = true }
cell-transport = { workspace = true, features = ["std"] } # For Synapse
cell-discovery = { workspace = true }
cell-sdk = { workspace = true } # For System::spawn types