[package]
name = "cell-transport"
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["std", "shm", "axon"]
# Added fd-lock and users to std because membrane.rs uses them
std = ["dep:tokio", "dep:socket2", "dep:dirs", "dep:tracing", "cell-core", "dep:fd-lock", "dep:users"]
shm = ["std", "dep:nix", "dep:memmap2", "dep:users"]
axon = ["std", "dep:cell-axon", "dep:quinn"]

[dependencies]
cell-core = { workspace = true, optional = true } 
cell-codec = { workspace = true }
cell-model = { workspace = true }
cell-discovery = { workspace = true }
cell-axon = { workspace = true, optional = true }

rkyv = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
fd-lock = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
users = { version = "0.11", optional = true }