[package]
name = "cell-transport"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
cell-core = { path = "../cell-core" }
cell-model = { path = "../cell-model" }
rkyv = { version = "0.7", features = ["alloc"] }
blake3 = "1.5"
tracing = "0.1"
