[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
rkyv = { version = "0.7", features = ["validation"] }
