[package]
name = "cell-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Zero-copy RPC framework and runtime SDK for the Cell distributed ecosystem."
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
humantime = { workspace = true }
# This pulls the path and version from [workspace.dependencies] in the root
cell-macros = { workspace = true }
rkyv = { workspace = true }
