[package]
name = "cell-macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Procedural macros for defining Cell schemas and RPC calls."
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rkyv = { workspace = true }
