[package]
name = "axon"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-sdk = { path = "../../cell-sdk" }
cell-model = { path = "../../cell-model" }
cell-discovery = { path = "../../cell-discovery" }
# Moved from cell-transport/cell-axon lib
cell-transport = { path = "../../cell-transport", features = ["std", "shm"] } 

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.10"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
rcgen = "0.11"
local-ip-address = "0.5"
if-addrs = "0.10"
futures = "0.3"
webpki-roots = "0.25"
rustls-pemfile = "1.0"
rand = "0.8"
blake3 = "1.5"
nix = { version = "0.27", features = ["user"] }