[package]
name = "cell-io"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
cell-model = { path = "../cell-model" }
cell-core = { path = "../cell-core" }
nix = { version = "0.27", features = ["socket", "uio", "fs", "mman"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"