[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cell-sdk = { path = "../../cell-sdk" }
cell-model = { path = "../../cell-model" }
cell-discovery = { path = "../../cell-discovery" }
socket2 = { version = "0.5", features = ["all"] }
rkyv = "0.7"
dirs = "5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
