[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-sdk = { path = "../../cell-sdk" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # Added
serde_yaml = { workspace = true }
cell-discovery = { workspace = true }
cell-model = { workspace = true }
