[package]
name = "state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-sdk = { path = "../../cell-sdk" }
cell-model = { path = "../../cell-model" }
cell-transport = { path = "../../cell-transport", features = ["std"] }
cell-discovery = { path = "../../cell-discovery" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rkyv = "0.7"
dirs = "5.0"
users = "0.11"
rand = "0.8"
which = "6.0"
