[package]
name = "cell-bind"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
convert_case = "0.6"
proc-macro2 = "1.0"
dirs = "5.0"
cell-build = { path = "../cell-build", version = "0.1.0" }