[package]
name = "cell-discovery"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cell-core = { workspace = true }
cell-model = { workspace = true }
rkyv = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "sync", "time"] }
dirs = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true, optional = true }
rand = { workspace = true }
if-addrs = { workspace = true }
blake3 = { workspace = true }
