[package]
name = "cell-consensus-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full", "sync"] }
cell-sdk = { path = "../../cell-sdk" }
cell-macros = { path = "../../cell-macros" }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Explicit rkyv needed for internal wal/raft logic if not fully covered by sdk prelude
rkyv = { version = "0.7", features = ["validation", "size_32"] }