[package]
name = "cell-git"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.18" # Key dependency for bare repo handling
dirs = "5.0"
cell-sdk = { path = "../../cell-sdk" }
cell-macros = { path = "../../cell-macros" }