[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

# Adjust paths to point to your local crates
cell-sdk = { path = "../../cell-sdk" }
cell-macros = { path = "../../cell-macros" }
